Committer: root <root@lily.uthsc.edu> On branch master

--- a/web/reference.html
+++ b/web/reference.html
@@ -187,20 +187,19 @@ Zhang B, Schmoyer D, Kirov S, Snoddy J (<a href="http://www.pubmedcentral.nih.go
 
 
 <LI>
-Ashbrook DG, Williams RW, Lu L, Stein JL, Hibar DP, Nichols TE, Medland SE, Thompson PM, Hager R. (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25280473" target="_blank" class="fwn">2014</A>) Joint genetic analysis of hippocampal size in mouse and human identifies a novel gene linked to neurodegenerative disease. BMC Genomics 15:850
-
+Ashbrook GN, Delprato A, Grellmann C, Klein M, Wetzel R, Overall RW, Badea A (<A HREF="https://ncbi.nlm.nih.gov/pubmed/get" target="_blank" class="fwn">2014</A>) Transcript co-variance with Nestin in two mouse genetic reference populations identifies Lef1 as a novel candidate regulator of neural precursor cell proliferation in the adult hippocampus. Frontiers in Neuroscience in press
 <LI>
-Emery FD, Parvathareddy J, Pandey AK, Cui Y, Williams RW, Miller MA (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24687986" target="_blank" class="fwn">2014</A>) Strains and stressors: an analysis of touchscreen learning in genetically diverse mouse strains. Pathog Dis 71:249-264
+Ashbrook DG, Williams RW, Lu L, Stein JL, Hibar DP, Nichols TE, Medland SE, Thompson PM, Hager R. (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25280473" target="_blank" class="fwn">2014</A>) Joint genetic analysis of hippocampal size in mouse and human identifies a novel gene linked to neurodegenerative disease. BMC Genomics 15:850
+<LI>
+Emery FD, Parvathareddy J, Pandey AK, Cui Y, Williams RW, Miller MA (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24687986" target="_blank" class="fwn">2014</A>) Genetic control of weight loss during pneumonic Burkholderia pseudomallei infection. Pathog Dis 71:249-264
 <LI>
 Goldowitz D, Lussier AA, Boyle JK, Wong K, Lattimer SL, Dubose C, Lu L, Kobor MS, Hamre KM (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25076964" target="_blank" class="fwn">2014</A>) Molecular pathways underpinning ethanol-induced neurodegeneration. Front Genet 5:203
 <LI>
 Graybeal C, Bachu M, Mozhui K, Saksida LM, Bussey TJ, Sagalyn E, Williams RW, Holmes A (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24586288" target="_blank" class="fwn">2014</A>) Strains and stressors: an analysis of touchscreen learning in genetically diverse mouse strains. PLoS One 9(2):e87745
 <LI>
 Hall RA, Liebe R, Hochrath K, Kazakov A, Alberts R, Laufs U, Böhm M, Fischer HP, Williams RW, Schughart K, Weber SN, Lammert F (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24586654" target="_blank" class="fwn">2014</A>) Systems genetics of liver fibrosis: Identification of fibrogenic and expression quantitative trait loci in the BXD murine reference population.PLoS One 9(2):e89279
-
 <LI>
 Harenza JL, Muldoon PP, Biasi MD, Imad Damaj M, Miles MF (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24289814" target="_blank" class="fwn">2014</A>) Genetic variation within the Chrna7 gene modulates nicotine reward-like phenotypes in mice. Genes, Brain & Behavior 13:213-225 
-
 <LI>
 Hayes SK, Hager R, Grencis RK (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24628794" target="_blank" class="fwn">2014</A>)  Sex-dependent genetics effects on immune responses to parasitic nematodes. BMC Genomics 15:193
 
@@ -226,42 +225,34 @@ Kweon KH, Lee CR, Jung SJ, Ban EJ, Kang SW, Jeong JJ, Nam KH, Jo YS, Lee J, Chun
 Loos M, Mueller T, Gouwenberg Y, Wijnands R, van der Loo RJ, Birchmeier C, Smit AB, Spijker S (<A HREF="/images/upload/Loos_Spijker_Nrg3Impulsive_BioPsch_2014.pdf" target="_blank" class="fwn">2014</A>) Neuregulin-3 in the mouse medial prefrontal cortex regulates impulsive action. Biol Psychiatry 76:648-655
 
 <LI>
-Lotan A, Fenckova M, Fralten J, Alttoa A, Dixson L, Williams RW, van der Voet M (<A HREF="https://ncbi.nlm.nih.gov/pubmed/get" target="_blank" class="fwn">2014</A>) Neuroinformatic analyses of common and distinct genetic components associate with major neuropsychiatric disorders. Frontiers in Neurogenomics in press
+Lotan A, Fenckova M, Fralten J, Alttoa A, Dixson L, Williams RW, van der Voet M (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25414627" target="_blank" class="fwn">2014</A>) Neuroinformatic analyses of common and distinct genetic components associate with major neuropsychiatric disorders. Frontiers in Neuroscience 8:331
 
 <LI>
 McLachlan SM, Aliesky H, Banuelos B, Magana J, Williams RW, Rapoport B. (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25051451" target="_blank" class="fwn">2014</A>) Immunoglobulin heavy chain variable region and major histocompatibility region genes are linked to induced graves' disease in females from two very large families of recombinant inbred mice. Endocrinology 155:4094-4103
-
 <LI>
 McLachlan SM, Hamidi S, Aliesky H, Williams RW, Rapoport B (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24564389" target="_blank" class="fwn">2014</A>) Sex, genetics and the control of thyroxine and thyrotropin in mice. Thyroid 24:1080-1087
-
 <LI>Muldoon PP, Jackson KJ, Perez E, Harenza JL, Molas S, Rais B, Anwar H, Zaveri NT, Maldonado R, Maskos U, McIntosh JM, Dierssen M, Miles MF, Chen X, De Biasi M, Damaj MI (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24750073" target="_blank" class="fwn">2014</A>) The alpha3beta4* nicotinic ACh receptor subtype mediates physical dependence to morphine: mouse and human studies. Br J Pharmacol 171:3845-3857
-
 <LI>Pandey AK, Lu L, Wang X, Homayouni R, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24523945" target="_blank" class="fwn">2014</A>) Functionally enigmatic genes: a case study of the brain ignorome. PLoS One 9(2):e88889
 
 <LI>Pandey AK, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25172476" target="_blank" class="fwn">2014</A>) Genetics of gene expression in CNS. Int Rev Neurobiol 116:195-231
+
+<LI> Pietrzykowski A, Spijker S (<A HREF="https://ncbi.nlm.nih.gov/pubmed/get" target="_blank" class="fwn">2014</A>) Impulsivity and comorbid traits: a multi-step approach for finding putative responsible microRNAs in the amygdala. Frontiers in Neuroscience in press
+
+<LI>Pirinen E, Cantó C, Jo YS, Morato L, Zhang H, Menzies KJ, Williams EG, Mouchiroud L, Moullan N, Hagberg C, Li W, Timmers S, Imhof R, Verbeek J, Pujol A, van Loon B, Viscomi C, Zeviani M, Schrauwen P, Sauve AA, Schoonjans K, Auwerx J (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24770626" target="_blank" class="fwn">2014</A>) Pharmacological inhibition of poly(ADP-ribose) polymerases improves fitness and mitochondrial function in skeletal muscle. Cell Metab 19:1034-1041
 
 <LI>Poon A, Goldowitz D (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24640950" target="_blank" class="fwn">2014</A>) Identification of genetic loci that modulate cell proliferation in the adult rostral migratory stream using the expanded panel of BXD mice. BMC Genomics 15:206
 
 <LI>Porcu P, Morrow AL (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24770626" target="_blank" class="fwn">2014</A>) Divergent neuroactive steroid responses to stress and ethanol
 in rat and mouse strains: relevance for human studies. Psychopharmacology (Berl) 231:3257-3272
-
-<LI>Pirinen E, Cantó C, Jo YS, Morato L, Zhang H, Menzies KJ, Williams EG, Mouchiroud L, Moullan N, Hagberg C, Li W, Timmers S, Imhof R, Verbeek J, Pujol A, van Loon B, Viscomi C, Zeviani M, Schrauwen P, Sauve AA, Schoonjans K, Auwerx J (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24770626" target="_blank" class="fwn">2014</A>) Pharmacological Inhibition of poly(ADP-ribose) polymerases improves fitness and mitochondrial function in skeletal muscle. Cell Metab 19:1034-1041
-
 <LI>Ryu D, Jo YS, Lo Sasso G, Stein S, Zhang H, Perino A, Lee JU, Zeviani M, Romand R, Hottiger MO, Schoonjans K, Auwerx J (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25200183" target="_blank" class="fwn">2014</A>) A SIRT7-dependent acetylation switch of GABPβ1 controls mitochondrial function. Cell Metab in press
-
 <LI>Thompson RL, Williams RW, Kotb M, Sawtell NM. (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24651695" target="_blank" class="fwn">2014</A>) A forward phenotypically driven unbiased genetic analysis of host genes that moderate herpes simplex virus virulence and stromal keratitis in mice. PLoS One 9(3):e92342
-
 <LI>Toth LA, Trammell RA, Williams RW (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24535895" target="_blank" class="fwn">2014</A>) Mapping complex traits using families of recombinant inbred strains: an overview and example of mapping susceptibility to Candida albicans induced illness phenotypes. Pathog Dis 71:234-248
-
 <LI>Unger EL, Jones BC, Bianco LE, Allen RP, Earley CJ (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24406439" target="_blank" class="fwn">2014</A>) Diurnal variations in brain iron concentrations in BXD RI mice. Neuroscience 263:54-59
-
-
+<LI>van de Lagemaat LN, Nijhof B, Bosch DG, Kohansal-Nodehi M, Keerthikumar S, Heimel JA (<A HREF="https://ncbi.nlm.nih.gov/pubmed/get" target="_blank" class="fwn">2014</A>) Age-related decreased inhibitory versus excitatory gene expression in the adult autistic brain. Frontiers in Neuroscience in press
+<LI> Vied CM, Freudenberg F, Wang Y, Raposo AA, Feng D, Nowakowski RS (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25191221" target="_blank" class="fwn">2014</A>) A multi-resource data integration approach: identification of candidate genes regulating cell proliferation during neocortical development. Frontiers in Neuroscience 8:257
 <LI>Wang L, Lu W, Zhang L, Huang Y, Scheib R, Liu X, Myers L, Lu L, Farber CR, Liu G, Wang CY, Deng H, Williams RW, Wang Y, Gu W, Jiao (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24416236" target="_blank" class="fwn">2014</A>)  Trps1 differentially modulates the bone mineral density between male and female mice and its polymorphism associates with BMD differently between women and men. PLoS One 9(1):e84485
-
 <LI>Wu Y, Williams EG, Dubuis S, Mottis A, Jovaisaite V, Houten SM, Argmann CA, Faridi P, Wolski W, Kutalik Z, Zamboni N, Auwerx J, Aebersold R (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25215496" target="_blank" class="fwn">2014</A>) Multilayered genetic and omics dissection of mitochondrial activity in a mouse reference population. Cell 158:1415-1430
-
 <LI>Williams EG, Mouchiroud L, Frochaux M, Pandey A, Andreux PA, Deplancke B, Auwerx J (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25255223" target="_blank" class="fwn">2014</A>) An evolutionarily conserved role for the aryl hydrocarbon receptor in the regulation of movement. PLoS Genet 10:e1004673
-
 <LI>
 Ye R, Carneiro AM, Airey D, Sanders-Bush E, Williams RW, Lu L, Wang J, Zhang B, Blakely RD (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24102824" target="_blank" class="fwn">2014</A>) Evaluation of heritable determinants of blood and brain serotonin homeostasis using recombinant inbred mice. Genes Brain Behav. 13:247-260
 
