Committer: root <root@lily.uthsc.edu> On branch master

--- a/web/reference.html
+++ b/web/reference.html
@@ -191,6 +191,8 @@ Ashbrook GN, Delprato A, Grellmann C, Klein M, Wetzel R, Overall RW, Badea A (<A
 <LI>
 Ashbrook DG, Williams RW, Lu L, Stein JL, Hibar DP, Nichols TE, Medland SE, Thompson PM, Hager R. (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25280473" target="_blank" class="fwn">2014</A>) Joint genetic analysis of hippocampal size in mouse and human identifies a novel gene linked to neurodegenerative disease. BMC Genomics 15:850
 <LI>
+Carhuatanta KA, Shea CJ, Herman JP, Jankord R (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25374516" target="_blank" class="fwn">2014</A>) Unique genetic loci identified for emotional behavior in control and chronic stress conditions. Front Behav Neurosci 8:341
+<LI>
 Emery FD, Parvathareddy J, Pandey AK, Cui Y, Williams RW, Miller MA (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24687986" target="_blank" class="fwn">2014</A>) Genetic control of weight loss during pneumonic Burkholderia pseudomallei infection. Pathog Dis 71:249-264
 <LI>
 Goldowitz D, Lussier AA, Boyle JK, Wong K, Lattimer SL, Dubose C, Lu L, Kobor MS, Hamre KM (<A HREF="https://ncbi.nlm.nih.gov/pubmed/25076964" target="_blank" class="fwn">2014</A>) Molecular pathways underpinning ethanol-induced neurodegeneration. Front Genet 5:203
