Committer: root <root@lily.uthsc.edu> On branch master

--- a/web/humanCross.html
+++ b/web/humanCross.html
@@ -21,36 +21,8 @@
 		
 <P class="title">Information on Human Data Sets<A HREF="/webqtl/main.py?FormID=editHtml"><img src="images/modify.gif" alt="modify this page" border= 0 valign="middle"></A></P>
 
-
-<Blockquote>
-<P>These human data sets are under development and not all features have been implemented in GeneNetwork. Mapping functions have not been implemented but it is possible to study the expression and covariation of transcripts.</P>
-</Blockquote>
-
 <A NAME="GTEx"></A>
 <B>The Genotype-Tissue Expression (GTEx) project (<a href="https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE45878" target=_blank>GSE45878</a> from GEO, entered into GeneNetwork, April 2014):</B>
-
-<Blockquote>
-<h1>WU-Minn HCP Consortium Open Access Data Use Terms</h1>
-
-<p><a href="http://www.humanconnectome.org/data/data-use-terms/open-access.html" target="_blank">WU-Minn HCP Consortium Open Access Data Use Terms</a>. <em>Last updated: Apr 26, 2013.</em></p>
-
-<p>I request access to data collected by the Washington University - University of Minnesota Consortium of the Human Connectome Project (WU-Minn HCP), and I agree to the following:</p>
-
-<ol>
-	<li>I will not attempt to establish the identity of or attempt to contact any of the included human subjects.</li>
-	<li>I understand that under no circumstances will the code that would link these data to Protected Health Information be given to me, nor will any additional information about individual human subjects be released to me under these Open Access Data Use Terms.</li>
-	<li>I will comply with all relevant rules and regulations imposed by my institution. This may mean that I need my research to be approved or declared exempt by a committee that oversees research on human subjects, e.g. my IRB or Ethics Committee.&nbsp;The released HCP data are not considered de-identified, insofar as&nbsp;certain combinations of HCP Restricted Data&nbsp;(available through a separate process) might allow identification of individuals. &nbsp;Different committees operate under different national, state and local laws and may interpret regulations differently, so it is important to ask about this. If needed and upon request, the HCP will provide a certificate stating that you have accepted the HCP Open Access Data Use Terms.</li>
-	<li>I may redistribute original WU-Minn HCP Open Access data and any derived data as long as the data are redistributed under these same Data Use Terms.</li>
-	<li>I will acknowledge the use of WU-Minn HCP data and data derived from WU-Minn HCP data when publicly presenting any results or algorithms that benefitted from their use.
-	<ol>
-		<li>Papers, book chapters, books, posters, oral presentations, and all other printed and digital presentations of results derived from HCP data should contain the following wording in the acknowledgments section: &quot;Data were provided [in part] by the Human Connectome Project, WU-Minn Consortium (Principal Investigators: David Van Essen and Kamil Ugurbil; 1U54MH091657) funded by the 16 NIH Institutes and Centers that support the NIH Blueprint for Neuroscience Research; and by the McDonnell Center for Systems Neuroscience at Washington University.&quot;</li>
-		<li>Authors of publications or presentations using WU-Minn HCP data should cite relevant publications describing the methods used by the HCP to acquire and process the data. The specific publications that are appropriate to cite in any given study will depend on what HCP data were used and for what purposes. An annotated and appropriately up-to-date list of publications that may warrant consideration is available at&nbsp;<a href="http://www.humanconnectome.org/about/acknowledgehcp.html" style="color: rgb(1, 104, 219); margin: 0px; padding: 0px; border: 0px; outline: 0px; vertical-align: baseline; background-color: transparent; text-decoration: none;" target="_blank">http://www.humanconnectome.org/about/acknowledgehcp.html</a></li>
-		<li>The WU-Minn HCP Consortium as a whole should not be included as an author of publications or presentations if this authorship would be based solely on the use of WU-Minn HCP data.</li>
-	</ol>
-	</li>
-	<li>Failure to abide by these guidelines will result in termination of my privileges to access WU-Minn HCP data.</li>
-</ol>
-
 
 <P><b>Please review and cite:</b> John Lonsdale, Jeffrey Thomas, Mike Salvatore, Rebecca Phillips, Edmund Lo, Saboor Shad, Richard Hasz, Gary Walters, Fernando Garcia, Nancy Young, Barbara Foster, Mike Moser, Ellen Karasik, Bryan Gillard, Kimberley Ramsey, Susan Sullivan, Jason Bridge, Harold Magazine, John Syron, Johnelle Fleming, Laura Siminoff, Heather Traino, Maghboeba Mosavel, Laura Barker, Scott Jewell, Dan Rohrer, Dan Maxim, Dana Filkins, Philip Harbach, Eddie Cortadillo, Bree Berghuis, Lisa Turner, Eric Hudson, Kristin Feenstra, Leslie Sobin, James Robb, Phillip Branton, Greg Korzeniewski, Charles Shive, David Tabor, Liqun Qi, Kevin Groch, Sreenath Nampally, Steve Buia, Angela Zimmerman, Anna Smith, Robin Burges, Karna Robinson, Kim Valentino, Deborah Bradbury, Mark Cosentino, Norma Diaz-Mayoral, Mary Kennedy, Theresa Engel, Penelope Williams, Kenyon Erickson, Kristin Ardlie, Wendy Winckler, Gad Getz, David DeLuca, Daniel MacArthur, Manolis Kellis, Alexander Thomson, Taylor Young, Ellen Gelfand, Molly Donovan, Yan Meng, George Grant, Deborah Mash, Yvonne Marcus, Margaret Basile, Jun Liu, Jun Zhu, Zhidong Tu, Nancy J Cox, Dan L Nicolae, Eric R Gamazon, Hae Kyung Im, Anuar Konkashbaev, Jonathan Pritchard, Matthew Stevens, Timothèe Flutre, Xiaoquan Wen, Emmanouil T Dermitzakis, Tuuli Lappalainen, Roderic Guigo, Jean Monlong, Michael Sammeth, Daphne Koller, Alexis Battle, Sara Mostafavi, Mark McCarthy, Manual Rivas, Julian Maller, Ivan Rusyn, Andrew Nobel, Fred Wright, Andrey Shabalin, Mike Feolo, Nataliya Sharopova, Anne Sturcke, Justin Paschal, James M Anderson, Elizabeth L Wilder, Leslie K Derr, Eric D Green, Jeffery P Struewing, Gary Temple, Simona Volpi, Joy T Boyer, Elizabeth J Thomson, Mark S Guyer, Cathy Ng, Assya Abdallah, Deborah Colantuoni, Thomas R Insel, Susan E Koester, A Roger Little, Patrick K Bender, Thomas Lehner, Yin Yao, Carolyn C Compton, Jimmie B Vaught, Sherilyn Sawyer, Nicole C Lockhart, Joanne Demchok & Helen F Moore. <A HREF="http://www.nature.com/ng/journal/v45/n6/abs/ng.2653.html">Nature Genetics 45, 580–585 (2013).</A></p>
 <p><a href="http://www.gtexportal.org/home/" target="_blank">GTEx explore all tissues:</a></p>
@@ -87,6 +59,30 @@ contributor: The Broad Institute of MIT and Harvard (LDACC PIs: Kristin Ardlie a
 <p><b>Exon Array expression data from 13 areas of the late second trimester human brain.</b> Our understanding of the evolution, formation, and pathological disruption of human brain circuits is impeded by a lack of comprehensive data on the developing brain transcriptome. Thus, we have undertaken whole-genome, exon-level expression analysis of thirteen regions from left and right sides of the mid-fetal human brain, finding 76% of genes to be expressed, and 44% of these to be differentially regulated. These data reveal a large number of specific gene expression and alternative splicing patterns, as well as co-expression networks, associated with distinct regions and neurodevelopmental processes. Of particular relevance to cognitive specializations, we have characterized the transcriptional landscapes of prefrontal cortex and perisylvian speech and language areas, which exhibit a population-level global expression symmetry. Finally, we show that differentially expressed genes are more frequently associated with human-specific evolution of putative cis-regulatory elements. Altogether, these data provide a wealth of novel biological insights into the complex transcriptional and molecular underpinnings of human brain development and evolution.</p>
 <P><b>Summary from <a href="http://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE13344" target=_blank>GEO Series: GSE13344</a></b> "Tissue was microdissected from 13 regions, including 9 distinct neocortical areas, from both left and right sides of four late second trimester human brain specimens. Gene- and exon-level differential expression analyses were performed by mixed model, nested analysis of variance using the XRAY software from Biotique Systems. Further details available in Johnson, Kawasawa, et al., "Functional and Evolutionary Insights into Human Brain Development through Global Transcriptome Analysis" Neuron, Volume 62, Issue 4, 2009"</P>
 
+</Blockquote>
+<A NAME="HCP"></A>
+<B>Human Connectome Project</B>
+<Blockquote>
+<h1>WU-Minn HCP Consortium Open Access Data Use Terms</h1>
+
+<p><em>Last updated: Apr 26, 2013.</em></p>
+
+<p>I request access to data collected by the Washington University - University of Minnesota Consortium of the Human Connectome Project (WU-Minn HCP), and I agree to the following:</p>
+
+<ol>
+	<li>I will not attempt to establish the identity of or attempt to contact any of the included human subjects.</li>
+	<li>I understand that under no circumstances will the code that would link these data to Protected Health Information be given to me, nor will any additional information about individual human subjects be released to me under these Open Access Data Use Terms.</li>
+	<li>I will comply with all relevant rules and regulations imposed by my institution. This may mean that I need my research to be approved or declared exempt by a committee that oversees research on human subjects, e.g. my IRB or Ethics Committee.&nbsp;The released HCP data are not considered de-identified, insofar as&nbsp;certain combinations of HCP Restricted Data&nbsp;(available through a separate process) might allow identification of individuals. &nbsp;Different committees operate under different national, state and local laws and may interpret regulations differently, so it is important to ask about this. If needed and upon request, the HCP will provide a certificate stating that you have accepted the HCP Open Access Data Use Terms.</li>
+	<li>I may redistribute original WU-Minn HCP Open Access data and any derived data as long as the data are redistributed under these same Data Use Terms.</li>
+	<li>I will acknowledge the use of WU-Minn HCP data and data derived from WU-Minn HCP data when publicly presenting any results or algorithms that benefitted from their use.
+	<ol>
+		<li>Papers, book chapters, books, posters, oral presentations, and all other printed and digital presentations of results derived from HCP data should contain the following wording in the acknowledgments section: &quot;Data were provided [in part] by the Human Connectome Project, WU-Minn Consortium (Principal Investigators: David Van Essen and Kamil Ugurbil; 1U54MH091657) funded by the 16 NIH Institutes and Centers that support the NIH Blueprint for Neuroscience Research; and by the McDonnell Center for Systems Neuroscience at Washington University.&quot;</li>
+		<li>Authors of publications or presentations using WU-Minn HCP data should cite relevant publications describing the methods used by the HCP to acquire and process the data. The specific publications that are appropriate to cite in any given study will depend on what HCP data were used and for what purposes. An annotated and appropriately up-to-date list of publications that may warrant consideration is available at&nbsp;<a href="http://www.humanconnectome.org/about/acknowledgehcp.html" style="color: rgb(1, 104, 219); margin: 0px; padding: 0px; border: 0px; outline: 0px; vertical-align: baseline; background-color: transparent; text-decoration: none;" target="_blank">http://www.humanconnectome.org/about/acknowledgehcp.html</a></li>
+		<li>The WU-Minn HCP Consortium as a whole should not be included as an author of publications or presentations if this authorship would be based solely on the use of WU-Minn HCP data.</li>
+	</ol>
+	</li>
+	<li>Failure to abide by these guidelines will result in termination of my privileges to access WU-Minn HCP data.</li>
+</ol>
 </Blockquote>
 
 <A NAME="HLC"></A>
@@ -228,7 +224,10 @@ Schroeder JW, Conneely KN, Cubells JC, Kilaru V, Newport DJ, Knight BT, Stowe ZN
 <P class="subtitle">About this file:</P> 
 
 
-<P> The file started, Aug 6, 2009 by AC. Last update by RWW, June 7, 2011.</P></Blockquote>
+<P> The file started, Aug 6, 2009 by AC. Last update by RWW, June 7, 2011.</P>
+<P> The GTEx SNP files was updated by Ashutosh Pandey and Lei Yan, February 20, 2015.</P>
+
+</Blockquote>
 		
 		</TD>
 		</TR></TABLE>
