On branch master

--- a/web/credit.html
+++ b/web/credit.html
@@ -24,23 +24,23 @@
 	        <UL>
 
 <LI> <A HREF="mailto:rwilliams@uthsc.edu">Robert W Williams</a>
-<LI>Kenneth Manly (design and QTL mapping)
-<LI>Jintao Wang (lead programmer)
-<LI><a href="http://www.nervenet.org/main/people.html">Xiaodong Zhou (lead programmer)</a>
+<LI>Kenneth Manly (design and QTL mapping, 1995-2007)
+<LI>Jintao Wang (lead programmer, 2001–2006)
+<LI><a href="http://www.nervenet.org/main/people.html">Xiaodong Zhou (lead programmer 2009–2011)</a>
 <LI><a href="http://www.nervenet.org/main/people.html">Lei Yan (systems and web services interface)</a>
-<LI>Ning Liu</LI>
-<LI>Zhaohui Sun (SNP browser)
-<LI><a href="http://www.nervenet.org/main/people.html">Arthur G. Centeno (data entry)</a>
-<LI><a href="http://www.nervenet.org/main/people.html">Xusheng Wang (data analysis)</a>
-<LI>Yanhua Qu (data entry)
+<LI>Ning Liu (programmer 2008–2009)</LI>
+<LI>Zhaohui Sun (SNP browser, programmer 2007)
+<LI><a href="http://www.nervenet.org/main/people.html">Arthur G. Centeno (data entry, 2008–present)</a>
+<LI><a href="http://www.nervenet.org/main/people.html">Xusheng Wang (data analysis, 2008-2012)</a>
+<LI>Yanhua Qu (data entry, 2005-2008)
 <LI>Stephen Pitts (programmer)
-<LI>Hongqiang Li (lead programmer)
-<LI><A HREF="http://www.jax.org/news/archives/2009/chesler.html">Elissa Chesler</A> (design of QTL Heat Map, Compare Correlations)
-<LI>Kevitt Adler (systems)
-<LI>Robert Crowell (SNP Browser)
-<LI>David Crowell (partial correlations)
-<LI>Evan G. Williams (SNP and Variant Browser, data entry)
-<LI>Alex G Williams (QTL Maps GUI)
+<LI>Hongqiang Li (lead programmer, 2007-2009)
+<LI><A HREF="http://www.jax.org/news/archives/2009/chesler.html">Elissa Chesler</A> (design of QTL Heat Map, Compare Correlations, 2004-2006)
+<LI>Kevitt Adler (systems, 2006-2008)
+<LI>Robert Crowell (SNP Browser, 2006-2007)
+<LI>David Crowell (partial correlations, 2008-2009)
+<LI>Evan G. Williams (SNP and Variant Browser, data entry, 2004-2006)
+<LI>Alex G Williams (QTL Maps GUI, 2003-2006)
 
  </UL>
  <P class="title">Published and Unpublished Phenotype Data</P>
