--- a/web/footer.html
+++ b/web/footer.html
@@ -10,7 +10,7 @@ This site is currently operated by
 		<A class="smallsize" HREF="mailto:rwilliams@uthsc.edu">Rob Williams</A>,
 		<A class="smallsize" HREF="mailto:lyan6@uthsc.edu">Lei Yan</A>,
 		<A class="smallsize" HREF="mailto:zachary.a.sloan@gmail.com">Zachary Sloan</A>,
-		<A class="smallsize" HREF="mailto:acenteno@uthsc.edu" target="_blank">Arthur Centeno</A>. Design and code by Sam Ockman, Xiaodong Zhou, Christian Fernandez, Ning Liu, Rudi Alberts, Elissa Chesler, Jintao Wang, Kenneth Manly, Alexander G. Williams, Robert W. Williams, and <A class="smallsize" HREF="/credit.html">colleagues</A>.
+		<A class="smallsize" HREF="mailto:acenteno@uthsc.edu" target="_blank">Arthur Centeno</A>. Design and code by Lei Yan, Zach Sloan, Kenneth Manly, Jintao Wang, Danny Arends, Pjotr Prins, Sam Ockman, Xiaodong Zhou, Christian Fernandez, Ning Liu, Rudi Alberts, Elissa Chesler, Evan G. Williams, Alexander G. Williams, Robert W. Williams, and <A class="smallsize" HREF="/credit.html">colleagues</A>.
 
 
 	</TD>
