Committer: root <root@dhcp-128-169-4-43.uthsc.edu> On branch master

--- a/web/RIsample.html
+++ b/web/RIsample.html
@@ -103,8 +103,8 @@
 <TD class="strains" width="80">BXD21</TD><TD class="values" width="60">8.783</TD>
 <TD class="strains" width="80">BXD22</TD><TD class="values" width="60">62.439</TD>
 <TD class="strains" width="80">BXD23</TD><TD class="values" width="60">40.449</TD>
-<TD class="strains" width="80">BXD24a</TD><TD class="values" width="60">X</TD>
 <TD class="strains" width="80">BXD24</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD24a</TD><TD class="values" width="60">X</TD>
 </TR>
 
 <TR>
@@ -137,8 +137,8 @@
 <TR>
 <TD class="strains" width="80">BXD44</TD><TD class="values" width="60">30.876</TD>
 <TD class="strains" width="80">BXD45</TD><TD class="values" width="60">22.120</TD>
-<TD class="strains" width="80">BXD48a</TD><TD class="values" width="60">20.704</TD>
 <TD class="strains" width="80">BXD48</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD48a</TD><TD class="values" width="60">20.704</TD>
 <TD class="strains" width="80">BXD49</TD><TD class="values" width="60">28.619</TD>
 <TD class="strains" width="80">BXD50</TD><TD class="values" width="60">X</TD>
 </TR>
@@ -162,9 +162,9 @@
 </TR>
 
 <TR>
+<TD class="strains" width="80">BXD65</TD><TD class="values" width="60">43.094</TD>
 <TD class="strains" width="80">BXD65a</TD><TD class="values" width="60">X</TD>
 <TD class="strains" width="80">BXD65b</TD><TD class="values" width="60">56.081</TD>
-<TD class="strains" width="80">BXD65</TD><TD class="values" width="60">43.094</TD>
 <TD class="strains" width="80">BXD66</TD><TD class="values" width="60">49.670</TD>
 <TD class="strains" width="80">BXD67</TD><TD class="values" width="60">16.654</TD>
 <TD class="strains" width="80">BXD68</TD><TD class="values" width="60">21.356</TD>
@@ -175,12 +175,12 @@
 <TD class="strains" width="80">BXD70</TD><TD class="values" width="60">26.860</TD>
 <TD class="strains" width="80">BXD71</TD><TD class="values" width="60">29.422</TD>
 <TD class="strains" width="80">BXD72</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD73</TD><TD class="values" width="60">30.713</TD>
 <TD class="strains" width="80">BXD73a</TD><TD class="values" width="60">68.684</TD>
-<TD class="strains" width="80">BXD73b</TD><TD class="values" width="60">X</TD>
 </TR>
 
 <TR>
-<TD class="strains" width="80">BXD73</TD><TD class="values" width="60">30.713</TD>
+<TD class="strains" width="80">BXD73b</TD><TD class="values" width="60">X</TD>
 <TD class="strains" width="80">BXD74</TD><TD class="values" width="60">X</TD>
 <TD class="strains" width="80">BXD75</TD><TD class="values" width="60">25.012</TD>
 <TD class="strains" width="80">BXD76</TD><TD class="values" width="60">38.874</TD>
@@ -222,7 +222,7 @@
 </TABLE>
 
 <P>Copy the following line to paste into the GeneNetwork entry box:</P>
-<CODE>6.717 11.511 X 20.201 X 15.175 X 43.132 21.755 47.028 X 22.096 22.219 X X 35.218 49.557 34.263 X 8.783 62.439 40.449 X  X 36.554 29.903 28.437 14.894 5.665 60.723 50.458 16.857 37.410 35.857 33.139 42.392 X 62.003 28.797 30.399 X X 30.876 22.120 20.704 X 28.619 X 16.156 41.392 30.412 26.209 62.690 23.878 38.629 27.467 23.630 X -0.900 X X 56.081 43.094 49.670 16.654 21.356 20.465 26.860 29.422 X 68.684 X 30.713 X 25.012 38.874 15.183 25.444 60.408 X 35.370 34.561 46.055 43.238 72.431 18.648 32.317 45.796 30.291 X 11.133 52.551 14.143 50.821 32.187 X  X </CODE>
+<CODE>6.717 11.511 X 20.201 X 15.175 X 43.132 21.755 47.028 X 22.096 22.219 X X 35.218 49.557 34.263 X 8.783 62.439 40.449 X  X 36.554 29.903 28.437 14.894 5.665 60.723 50.458 16.857 37.410 35.857 33.139 42.392 X 62.003 28.797 30.399 X X 30.876 22.120 X 20.704 28.619 X 16.156 41.392 30.412 26.209 62.690 23.878 38.629 27.467 23.630 X -0.900 X 43.094 X 56.081 49.670 16.654 21.356 20.465 26.860 29.422 X 30.713 68.684 X X 25.012 38.874 15.183 25.444 60.408 X 35.370 34.561 46.055 43.238 72.431 18.648 32.317 45.796 30.291 X 11.133 52.551 14.143 50.821 32.187 X  X </CODE>
 
 <HR width="90%"><P class="subtitle">BXH</P>
 
