Committer: root <root@dhcp-128-169-4-43.uthsc.edu> On branch master

--- a/web/reference.html
+++ b/web/reference.html
@@ -177,6 +177,28 @@ Zhang B, Schmoyer D, Kirov S, Snoddy J (<a href="http://www.pubmedcentral.nih.go
 
 
 
+<BLOCKQUOTE class="fs15">
+		<A NAME="2015" class="subtitle"">GeneNetwork (2015) </A>
+<BLOCKQUOTE>
+
+</Blockquote>
+<OL>
+<LI>
+Chaum E, Winborn CS, Bhattacharya S (<A HREF="https://ncbi.nlm.nih.gov/pubmed/get" target="_blank" class="fwn">2015</A>) Genomic regulation of senescence and innate immunity signaling in the retinal pigment epithelium.  Mammalian Genome in press <A HREF="/images/upload/ChaumMammGenome2015.pdf"> Full text</A>
+
+
+
+</OL>
+</Blockquote>
+
+
+
+
+
+
+
+
+
 
 <BLOCKQUOTE class="fs14">
 		<A NAME="2014" class="subtitle"">GeneNetwork (2014) </A>
