Committer: root <root@dhcp-128-169-4-43.uthsc.edu> On branch master

--- a/web/footer.html
+++ b/web/footer.html
@@ -9,6 +9,7 @@ WWW service initiated January, 1994 as <A HREF="http://www.ncbi.nlm.nih.gov/pubm
 This site is currently operated by
 		<A class="smallsize" HREF="mailto:rwilliams@uthsc.edu">Rob Williams</A>,
 		<A class="smallsize" HREF="mailto:lyan6@uthsc.edu">Lei Yan</A>,
+		<A class="smallsize" HREF="mailto:pjotr.public32@thebird.nl">Pjotr Prins</A>,
 		<A class="smallsize" HREF="mailto:zachary.a.sloan@gmail.com">Zachary Sloan</A>,
 		<A class="smallsize" HREF="mailto:acenteno@uthsc.edu" target="_blank">Arthur Centeno</A>. Design and code by Lei Yan, Zach Sloan, Kenneth Manly, Jintao Wang, Danny Arends, Pjotr Prins, Sam Ockman, Xiaodong Zhou, Christian Fernandez, Ning Liu, Rudi Alberts, Elissa Chesler, Evan G. Williams, Alexander G. Williams, Robert W. Williams, and <A class="smallsize" HREF="/credit.html">colleagues</A>.
 
